.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Outcome__c.object
<CustomObject>
    <description>Represents an outcome of an Activity during the life cycle of a Service Request</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Can_Close_SR__c</fullName>
        <formula>OR(
   ISPICKVAL(Incap311__Outcome_Action__c, &quot;Close&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can Close SR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Default_Owner__c</fullName>
        <inlineHelpText>Developer Name of a Queue</inlineHelpText>
        <label>Default Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Action__c</fullName>
        <description>The action on the Service Request that should happen when this outcome is applied</description>
        <label>Outcome Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Reallocate</fullName>
                </value>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Attempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Code__c</fullName>
        <label>Outcome Code</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Detail__c</fullName>
        <label>Outcome Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Junction_Count__c</fullName>
        <label>Outcome Junction Count</label>
        <summaryForeignKey>Incap311__Outcome_Question__c.Incap311__Activity_Outcome__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Incap311__Owner_Not_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Not Editable?</label>
        <type>Checkbox</type>
    </fields>
    <label>Outcome</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <columns>NAME</columns>
        <columns>Incap311__Outcome_Code__c</columns>
        <columns>Incap311__Outcome_Detail__c</columns>
        <columns>Incap311__Can_Close_SR__c</columns>
        <columns>Incap311__Outcome_Action__c</columns>
        <columns>Incap311__Default_Owner__c</columns>
        <columns>Incap311__Owner_Not_Editable__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OC-{00000000}</displayFormat>
        <label>Outcome Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Incap311__No_Special_Chars_In_Outcome_Code</fullName>
        <active>true</active>
        <description>Validates for only alphanumeric, hyphen, and underscore in Outcome Code field</description>
        <errorConditionFormula>NOT(REGEX(Incap311__Outcome_Code__c, &quot;[a-zA-Z0-9_-]+&quot;))</errorConditionFormula>
        <errorDisplayField>Incap311__Outcome_Code__c</errorDisplayField>
        <errorMessage>You must only use alphanumeric (a-z, 0-9), hyphen, or underscore in the Outcome Code field.</errorMessage>
    </validationRules>
</CustomObject>